## -*- Makefile -*-
##---------------------------------------------------------------------------
## Makefile.am for etc distribution files
##
## $Id$
##
## $Log: not supported by cvs2svn $
##---------------------------------------------------------------------------

AUTOMAKE_OPTIONS = 1.4

dist_sysconf_DATA = rtc.conf.sample
