add_subdirectory(SimpleIO)
add_subdirectory(SeqIO)
add_subdirectory(AutoTest)
#add_subdirectory(HelloWorld)
add_subdirectory(ExtTrigger)
add_subdirectory(SimpleService)
#add_subdirectory(StringIO)
add_subdirectory(ConfigSample)
add_subdirectory(Composite)
add_subdirectory(Analyzer)
add_subdirectory(Throughput)

#add_subdirectory(FileTest)
