## -*- Makefile -*-
##------------------------------------------------------------
## Makefile.am for examples
##
## $Id$
##------------------------------------------------------------


AUTOMAKE_OPTIONS = 1.4

SUBDIRS = Composite ConfigSample SimpleIO SeqIO SimpleService ExtTrigger Fsm StaticFsm MultiInPort Templates @UNITTEST@

EXTRA_DIST =               \
	rtc.vcproj.yaml    \
	rtcdll.vcproj.yaml

DIST_SUBDIRS = Composite ConfigSample SimpleIO SeqIO SimpleService ExtTrigger AutoTest Fsm StaticFsm MultiInPort Templates tests
