## -*- Makefile -*-
##------------------------------------------------------------
## Makefile.am for examples
##
## $Id$
##------------------------------------------------------------


AUTOMAKE_OPTIONS = 1.4

SUBDIRS = Analyzer Composite ConfigSample SimpleIO SeqIO SimpleService ExtTrigger Fsm Templates Throughput @UNITTEST@
EXTRA_DIST =               \
	rtc.vcproj.yaml    \
	rtcdll.vcproj.yaml

DIST_SUBDIRS = Analyzer Composite ConfigSample SimpleIO SeqIO SimpleService ExtTrigger Fsm AutoTest Templates Throughput tests