## -*- Makefile -*-
##------------------------------------------------------------
## Makefile.am for libRTC
##
## $Id: Makefile.am,v 1.13 2007-01-21 14:17:21 n-ando Exp $
##
## $Log: not supported by cvs2svn $
## Revision 1.12  2007/01/12 15:02:59  n-ando
## The versioin.h should not be included in dist. files.
##
## Revision 1.11  2007/01/12 14:32:49  n-ando
## Some headers that should be included in the distribution package were
## added to the EXTRA_DIST entry.
##
## Revision 1.10  2007/01/09 09:58:45  n-ando
## libRTC.so's source entry was divided and organizaed.
##
## Revision 1.9  2006/12/02 18:42:20  n-ando
## Some file entries were added.
##
## Revision 1.8  2006/11/27 10:03:58  n-ando
## CppUnit test sub-directory "tests" was added.
##
## Revision 1.7  2006/11/10 04:33:11  n-ando
## NVUtil is added.
##
## Revision 1.6  2006/10/24 06:24:15  n-ando
## Now StringUtil was devided into definition and implementation.
##
## Revision 1.5  2006/10/17 10:00:36  n-ando
## Some build entry for the following classes was added.
## PortAdmin, PortProfileHelper, ManagerConfig, Manager.
##
## Revision 1.4  2006/09/20 08:52:50  n-ando
## ModuleManager class added.
##
## Revision 1.3  2006/09/11 18:44:23  n-ando
## SDO and Properties classes are added.
##
## Revision 1.2  2005/09/07 04:58:22  n-ando
## RTComponent's service management feature was added.
##
## Revision 1.1.1.1  2005/05/12 09:06:18  n-ando
## Public release.
##
##------------------------------------------------------------

AUTOMAKE_OPTIONS = 1.4

ARTLIB = @ARTLIB@
SUBDIRS = idl . @UNITTEST@

AM_CPPFLAGS=-I$(top_srcdir) -I$(top_srcdir)/rtm/idl
AM_LDFLAGS=-L$(top_builddir) -L$(top_builddir)/rtm -L$(top_builddir)/rtm/idl

# version.h would be generated from configure before lib build process.
BUILT_SOURCES = version.h
version.h:
	echo '// This header file is automatically generated.' > $@
	echo '// Do not edit this file.' >> $@
	echo '' >> $@
	echo 'const char* openrtm_name    = "'${PACKAGE}'-'${VERSION}'";' >> $@
	echo 'const char* openrtm_version = "'${VERSION}'";' >> $@
	echo 'const char* corba_name      = "'${ORB}'";' >> $@


# libRTC.so, libRTC.a library build entry
lib_LTLIBRARIES = libRTC.la

# sources of libRTC.la
#	ExecutionContext.cpp
#	PortProfileHelper.cpp
#	ObjectManager.cpp

UTIL_SRC = \
	NVUtil.cpp \
	Properties.cpp \
	StringUtil.cpp

MGR_SRC = \
	CorbaNaming.cpp \
	CorbaObjectManager.cpp \
	Factory.cpp \
	Manager.cpp \
	ManagerConfig.cpp \
	ModuleManager.cpp \
	NamingManager.cpp \
	NumberingPolicy.cpp

COMP_SRC = \
	DataFlowComponentBase.cpp \
	PeriodicExecutionContext.cpp \
	PortAdmin.cpp \
	RTObject.cpp \
	SdoConfiguration.cpp \
	SdoOrganization.cpp

PORT_SRC = \
	CorbaPort.cpp \
	DataInPort.cpp \
	DataOutPort.cpp \
	InPortProvider.cpp \
	OutPortBase.cpp \
	OutPortProvider.cpp \
	PortBase.cpp \
	PublisherFactory.cpp \
	PublisherFlush.cpp \
	PublisherNew.cpp \
	PublisherPeriodic.cpp


RTC_SRC = \
	version.h \
	$(UTIL_SRC) $(MGR_SRC) $(COMP_SRC) $(PORT_SRC)


libRTC_la_SOURCES = \
	version.h \
	$(UTIL_SRC) $(MGR_SRC) $(COMP_SRC) $(PORT_SRC)


libRTC_la_LIBADD = $(top_builddir)/rtm/idl/libRTCSkel.la $(ARTLIB)
libRTC_la_LDFLAGS = -L$(top_builddir)/rtm/idl -release $(PACKAGE_VERSION) -version-info 0:4:0


rtmheaderdir = $(prefix)/include/rtm

rtmheader_HEADERS = \
	$(libRTC_la_SOURCES:.cpp=.h) \
	BufferBase.h                 \
	CORBA_SeqEx.h                \
	CORBA_SeqUtil.h              \
	CorbaConsumer.h              \
	DefaultConfiguration.h       \
	InPort.h                     \
	InPortConsumer.h             \
	InPortCorbaConsumer.h        \
	InPortCorbaProvider.h        \
	ObjectManager.h              \
	OutPort.h                    \
	OutPortConsumer.h            \
	OutPortCorbaConsumer.h       \
	OutPortCorbaProvider.h       \
	PortCallBack.h               \
	PublisherBase.h              \
	RTC.h                        \
	RingBuffer.h                 \
	SdoService.h                 \
	StateMachine.h               \
	SystemLogger.h               \
	UUID.h                       \
	config_rtc.h


EXTRA_DIST = $(rtmheader_HEADERS)
DIST_SUBDIRS = idl tests

clean-local:
	rm -f *.bak *.rpo *.sym lib*.*_pure_* Makefile.old *core *~
