## -*- Makefile -*-
##---------------------------------------------------------------------------
## Makefile.am for OpenRTM-aist utilities
##
## $Id: Makefile.am,v 1.2 2005-09-06 14:48:48 n-ando Exp $
##
## $Log: not supported by cvs2svn $
## Revision 1.1.1.1  2005/05/12 09:06:18  n-ando
## Public release.
##
##---------------------------------------------------------------------------

AUTOMAKE_OPTIONS = 1.4

SUBDIRS = rtm-config rtc-template rtcd rtcsh rtm-naming rtc-link rtm-skelwrapper
