## -*- Makefile -*-
##---------------------------------------------------------------------------
## Makefile.am for OpenRTM-aist utilities
##
## $Id: Makefile.am,v 1.4 2007-01-21 13:18:43 n-ando Exp $
##
## $Log: not supported by cvs2svn $
## Revision 1.3  2007/01/12 14:58:02  n-ando
## Now build subdirs are only rtm-config rtc-template rtc-link rtm-skelwrapper.
##
## Revision 1.2  2005/09/06 14:48:48  n-ando
## rtm-skelwrapper added.
##
## Revision 1.1.1.1  2005/05/12 09:06:18  n-ando
## Public release.
##
##---------------------------------------------------------------------------

AUTOMAKE_OPTIONS = 1.4

SUBDIRS = rtm-config rtc-template rtc-link rtm-skelwrapper rtm-naming
