## -*- Makefile -*-
##---------------------------------------------------------------------------
## Makefile.am for OpenRTM-aist utilities
##
## $Id$
##---------------------------------------------------------------------------

AUTOMAKE_OPTIONS = 1.4

SUBDIRS = rtm-config rtc-template rtm-skelwrapper rtm-naming rtcd rtm-manager
